projet_gl/src/test/deca/lexer/valid/readint.deca
// Description:
//    test lexer for reading a integer.
//
// Resultats:
//    INT: [@0,124:124='6',<44>,10:0]
//
// Historique:
//    cree le 10/01/2024

6