projet_gl/src/test/deca/lexer/invalid/incorrectLetter.deca
// Description:
//    test lexer invalid for letters.
//
// Resultats:
//    line=10 token recognition error at: '''
//
// Historique:
//    cree le 10/01/2024

'a